@@ -1,38 +1,198 @@
 # Java代码示例验证报告 (Q1-2)
 
-> **生成时间**: 2026-04-12T21:22:51.088435
-> **验证器版本**: 1.0.0 (分批处理版本)
+> **生成时间**: 2026-04-13T17:29:59.753344
 > **任务**: Q1-2 Java代码示例验证
+> **方法**: 静态分析 (正则表达式匹配)
 
 ## 📊 验证统计
 
 | 指标 | 数值 |
 |------|------|
-| 扫描Markdown文件数 | 3129 |
-| Java代码块总数 | 4594 |
-| ✅ 验证通过 | 117 |
-| ❌ 验证失败 | 4477 |
-| 🔧 可自动修复 | 0 |
-| **通过率** | 2.55% |
+| Java代码块总数 | 2703 |
+| ✅ 无问题代码 | 1469 |
+| ⚠️ 有问题代码 | 1234 |
+| 📝 代码片段 | 1388 |
+| 🔗 缺少import | 2547 处 |
+| 📦 弃用API | 3 处 |
+| 🔧 语法问题 | 71 处 |
 
-### 问题类型分布
+## 🔗 缺少Import的文件
 
-| 问题类型 | 数量 | 说明 |
-|----------|------|------|
-| missing_import | 2264 | 缺少import语句 |
-| syntax_error | 2209 | 语法错误 |
-| error | 4 | 其他错误 |
+共 **1202** 个文件缺少import语句：
 
-## 🚨 问题代码清单 (前100个)
+- `AI-STREAMING-RESEARCH-REPORT-2024-2025.md` 第590行: Table
+- `CASE-STUDIES.md` 第267行: Pattern
+- `CASE-STUDIES.md` 第496行: MapStateDescriptor, Collector
+- `CASE-STUDIES.md` 第614行: SlidingEventTimeWindows
+- `CASE-STUDIES.md` 第735行: TumblingEventTimeWindows
+- `CASE-STUDIES.md` 第809行: Configuration
+- `CASE-STUDIES.md` 第904行: KeyedProcessFunction, Collector
+- `CASE-STUDIES.md` 第1155行: ListState, KeyedProcessFunction, Collector
+- `CASE-STUDIES.md` 第1446行: SlidingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第37行: Table
+- `CODE-VALIDATION-JAVA-REPORT.md` 第91行: Pattern
+- `CODE-VALIDATION-JAVA-REPORT.md` 第112行: MapStateDescriptor
+- `CODE-VALIDATION-JAVA-REPORT.md` 第135行: SlidingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第182行: Configuration
+- `CODE-VALIDATION-JAVA-REPORT.md` 第238行: KeyedProcessFunction
+- `CODE-VALIDATION-JAVA-REPORT.md` 第260行: SlidingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第283行: Table
+- `CODE-VALIDATION-JAVA-REPORT.md` 第465行: SlidingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第487行: Pattern
+- `CODE-VALIDATION-JAVA-REPORT.md` 第548行: TumblingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第596行: Pattern
+- `CODE-VALIDATION-JAVA-REPORT.md` 第630行: Configuration
+- `CODE-VALIDATION-JAVA-REPORT.md` 第668行: DataStream
+- `CODE-VALIDATION-JAVA-REPORT.md` 第694行: Table
+- `CODE-VALIDATION-JAVA-REPORT.md` 第775行: Pattern
+- `CODE-VALIDATION-JAVA-REPORT.md` 第796行: MapStateDescriptor
+- `CODE-VALIDATION-JAVA-REPORT.md` 第843行: Configuration
+- `CODE-VALIDATION-JAVA-REPORT.md` 第900行: KeyedProcessFunction
+- `CODE-VALIDATION-JAVA-REPORT.md` 第922行: SlidingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第965行: KeyedProcessFunction, Configuration
+- `CODE-VALIDATION-JAVA-REPORT.md` 第987行: TumblingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1053行: EventTimeSessionWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1068行: TumblingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1213行: DataStream, SingleOutputStreamOperator, FlatMapFunction, TypeInformation
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1469行: DataStream
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1541行: StreamTableEnvironment
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1629行: TumblingEventTimeWindows, Table
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1893行: TumblingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1939行: Pattern
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1958行: RichMapFunction
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1980行: TumblingEventTimeWindows
+- `CODE-VALIDATION-JAVA-REPORT.md` 第2004行: RichMapFunction, Configuration
+- `CODE-VALIDATION-JAVA-REPORT.md` 第2067行: OutputTag
+- `FAQ.md` 第501行: TumblingEventTimeWindows
+- `FAQ.md` 第771行: WatermarkStrategy
+- `FAQ.md` 第825行: TypeInformation, Configuration
+- `FAQ.md` 第915行: TypeInformation
+- `FAQ.md` 第1052行: StreamTableEnvironment, Table
+- `FAQ.md` 第1459行: TumblingEventTimeWindows, StateTtlConfig, Table
+- `FAQ.md` 第1657行: TumblingEventTimeWindows
+- `FAQ.md` 第1774行: MapFunction
+- `INTEGRATED-GUIDE.md` 第69行: TumblingEventTimeWindows
+- `JAVA-CODE-FIX-REPORT.md` 第46行: StreamExecutionEnvironment, DataStream
+- `JAVA-CODE-FIX-REPORT.md` 第73行: WatermarkStrategy
+- `OBSERVABILITY-GUIDE.md` 第376行: RichMapFunction, Configuration
+- `PRACTICAL-EXAMPLES.md` 第7行: FlatMapFunction, Collector
+- `PRACTICAL-EXAMPLES.md` 第43行: TumblingEventTimeWindows
+- `PRACTICAL-EXAMPLES.md` 第77行: Pattern, CEP
+- `TROUBLESHOOTING.md` 第193行: RichMapFunction
+- `TROUBLESHOOTING.md` 第269行: TumblingEventTimeWindows
+- `TROUBLESHOOTING.md` 第337行: TumblingEventTimeWindows, RichMapFunction, Configuration
+- `TROUBLESHOOTING.md` 第484行: StateTtlConfig, KeyedProcessFunction, Collector, Configuration
+- `TROUBLESHOOTING.md` 第578行: SingleOutputStreamOperator, TumblingEventTimeWindows, OutputTag
+- `TROUBLESHOOTING.md` 第641行: SingleOutputStreamOperator, WatermarkStrategy, TimeWindow, TumblingEventTimeWindows, ProcessWindowFunction 等7个
+- `TROUBLESHOOTING.md` 第839行: ListState, ListStateDescriptor, Collector, Configuration
+- `whitepaper-streaming-2027.md` 第443行: SlidingEventTimeWindows
+- `whitepaper-streaming-2027.md` 第967行: Pattern
+- `en\GLOSSARY.md` 第484行: TumblingEventTimeWindows
+- `en\GLOSSARY.md` 第736行: EventTimeSessionWindows
+- `en\GLOSSARY.md` 第849行: TumblingEventTimeWindows
+- `en\QUICK-START.md` 第450行: Configuration
+- `en\TEMPLATE.md` 第169行: StreamExecutionEnvironment, Configuration
+- `Flink\00-FLINK-TECH-STACK-DEPENDENCY.md` 第365行: DataStream
+- `Flink\00-FLINK-TECH-STACK-DEPENDENCY.md` 第390行: Table
+- `Flink\3.9-state-backends-deep-comparison.md` 第421行: StateTtlConfig, KeyedProcessFunction, Collector, Configuration
+- `Flink\flink-cep-complete-tutorial.md` 第291行: Pattern
+- `Flink\flink-cep-complete-tutorial.md` 第499行: WatermarkStrategy, Pattern, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第588行: WatermarkStrategy, Collector, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第716行: WatermarkStrategy, Collector, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第817行: WatermarkStrategy, Pattern, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第870行: CEP
+- `Flink\flink-cep-complete-tutorial.md` 第932行: Pattern, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第996行: Pattern, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第1057行: Pattern, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第1123行: Configuration, CEP
+- `Flink\flink-cep-complete-tutorial.md` 第1180行: WatermarkStrategy, Pattern, CEP
+- `Flink\flink-nexmark-benchmark-guide.md` 第405行: Configuration
+- `Flink\flink-nexmark-benchmark-guide.md` 第495行: TumblingEventTimeWindows
+- `Flink\flink-state-backends-comparison.md` 第487行: Configuration
+- `Flink\flink-state-backends-comparison.md` 第514行: Configuration
+- `Flink\flink-state-backends-comparison.md` 第563行: Configuration
+- `Flink\flink-ycsb-benchmark-guide.md` 第356行: StateTtlConfig, KeyedProcessFunction, Collector
+- `Flink\mongodb-connector-guide.md` 第246行: WatermarkStrategy, TypeInformation
+- `Flink\mongodb-connector-guide.md` 第282行: WatermarkStrategy
+- `Flink\pulsar-functions-integration.md` 第217行: WatermarkStrategy, TumblingEventTimeWindows
+- `Flink\risingwave-integration-guide.md` 第193行: Table
+- `formal-methods\COMPARISON-WORKFLOW-VS-STREAM.md` 第219行: WatermarkStrategy, TumblingEventTimeWindows, Pattern, CEP
+- `formal-methods\分布式系统形式化建模理论与验证方法.md` 第1137行: ListState, ListStateDescriptor, MapState, MapStateDescriptor, TypeInformation
+- `Knowledge\cep-complete-tutorial.md` 第285行: Collector, Pattern
+- `Knowledge\cep-complete-tutorial.md` 第330行: Pattern
+- ... 还有 1102 个文件
 
-共发现 **4477** 个有问题的Java代码示例，显示前100个：
+## 📦 使用弃用API的文件
 
-### `AI-STREAMING-RESEARCH-REPORT-2024-2025.md` (第 590 行)
+共 **3** 个文件使用弃用API：
 
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.table.api.TableEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.table.api.TableEnvironment;                                             ...
+- `JAVA-CODE-FIX-REPORT.md` 第65行: setStreamTimeCharacteristic已弃用
+- `tutorials\02-streaming-fundamentals-script.md` 第162行: setStreamTimeCharacteristic已弃用
+- `Knowledge\04-technology-selection\multidimensional-comparison-matrices.md` 第1733行: setStreamTimeCharacteristic已弃用
 
-**代码预览**:
+## 🔧 语法问题的文件
+
+共 **57** 个文件有语法问题：
+
+- `CODE-VALIDATION-JAVA-REPORT.md` 第37行: 括号不匹配: (=7, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第135行: 括号不匹配: (=9, )=7
+- `CODE-VALIDATION-JAVA-REPORT.md` 第198行: 大括号不匹配: {=2, }=0; 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第238行: 大括号不匹配: {=1, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第260行: 括号不匹配: (=10, )=8
+- `CODE-VALIDATION-JAVA-REPORT.md` 第283行: 括号不匹配: (=7, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第305行: 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第369行: 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第465行: 大括号不匹配: {=1, }=0; 括号不匹配: (=10, )=9
+- `CODE-VALIDATION-JAVA-REPORT.md` 第487行: 大括号不匹配: {=2, }=0; 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第505行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第527行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第630行: 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第754行: 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第860行: 大括号不匹配: {=2, }=0; 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第900行: 大括号不匹配: {=1, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第922行: 括号不匹配: (=10, )=8
+- `CODE-VALIDATION-JAVA-REPORT.md` 第945行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第965行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1106行: 括号不匹配: (=2, )=1
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1213行: 大括号不匹配: {=1, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1249行: 大括号不匹配: {=2, }=0; 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1267行: 大括号不匹配: {=1, }=0; 括号不匹配: (=3, )=2
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1286行: 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1348行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1407行: 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1430行: 括号不匹配: (=8, )=7
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1447行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1469行: 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1518行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1541行: 括号不匹配: (=2, )=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1585行: 括号不匹配: (=8, )=7
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1607行: 大括号不匹配: {=2, }=0; 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1654行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1699行: 大括号不匹配: {=2, }=0; 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1746行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1768行: 大括号不匹配: {=4, }=1; 括号不匹配: (=4, )=3
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1787行: 括号不匹配: (=10, )=9
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1811行: 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1872行: 大括号不匹配: {=2, }=0
+- `CODE-VALIDATION-JAVA-REPORT.md` 第1958行: 大括号不匹配: {=3, }=2
+- `CODE-VALIDATION-JAVA-REPORT.md` 第2004行: 大括号不匹配: {=2, }=1; 括号不匹配: (=5, )=4
+- `CODE-VALIDATION-JAVA-REPORT.md` 第2027行: 大括号不匹配: {=2, }=0; 括号不匹配: (=3, )=2
+- `CODE-VALIDATION-JAVA-REPORT.md` 第2067行: 大括号不匹配: {=2, }=0; 括号不匹配: (=3, )=2
+- `reports\theorem-uniqueness-report.md` 第3454行: 大括号不匹配: {=1, }=0
+- `reports\theorem-uniqueness-report.md` 第3474行: 大括号不匹配: {=1, }=0
+- `reports\theorem-uniqueness-report.md` 第3494行: 大括号不匹配: {=1, }=0
+- `reports\theorem-uniqueness-report.md` 第5169行: 大括号不匹配: {=1, }=0
+- `reports\theorem-uniqueness-report.md` 第68708行: 大括号不匹配: {=1, }=0
+- `tutorials\interactive\hands-on-labs\lab-05-checkpoint.md` 第86行: 括号不匹配: (=10, )=11
+- ... 还有 7 个文件
+
+## 💡 修复示例
+
+### 添加Import示例
+
+**文件**: `AI-STREAMING-RESEARCH-REPORT-2024-2025.md` 第590行
+
+**当前代码**:
 
 ```java
 
@@ -40,2102 +200,35 @@ import org.apache.flink.table.api.TableEnvironment;
 
 // Flink Table API模型推理
 EnvironmentSettings settings = EnvironmentSettings.inStreamingMode();
-TableEnvironment tEnv = TableEnvironment.create(settings);
-
-// 创建模型
-tEnv.createModel(
-    "translation_model",
-    ModelDescriptor.forProvider("openai")
-        .inputSchema(Schema.newBuilder().column("input...
-```
-
-### `BEST-PRACTICES-COMPLETE.md` (第 25 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要<标识符>     env.disableOperatorChaining(); // 仅调试时使用                                ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:6: 错误: 需要<标识符>     stream.map(...).startNewChain().filter(...);               ^ C:\Users\luyan\AppD...
-
-**代码预览**:
-
-```java
-// 允许算子链（默认）
-env.disableOperatorChaining(); // 仅调试时使用
-
-// 自定义算子链
-stream.map(...).startNewChain().filter(...);
-
-```
-
-### `BEST-PRACTICES-COMPLETE.md` (第 39 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要<标识符>     env.getConfig().setAutoWatermarkInterval(200);                  ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要';'     env.getConfig().setAutoWatermarkInterval(200);                    ^ C:\Users\luyan\AppData...
-
-**代码预览**:
-
-```java
-// 配置网络缓冲区
-env.getConfig().setAutoWatermarkInterval(200);
-
-// 配置Checkpoint超时
-env.getCheckpointConfig().setCheckpointTimeout(600000);
-
-```
-
-### `CASE-STUDIES.md` (第 263 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// Watermark策略：业务时间 + 200ms延迟
-WatermarkStrategy<Transaction> strategy = WatermarkStrategy
-    .<Transaction>forBoundedOutOfOrderness(Duration.ofMillis(200))
-    .withIdleness(Duration.ofSeconds(30));
-
-// CEP模式：3分钟内同一卡号在3个不同国家交易
-Pattern<Transaction, ?> suspiciousPattern = Pattern
-    .<Transaction>be...
-```
-
-### `CASE-STUDIES.md` (第 487 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.state.MapStateDescriptor;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.state.MapStateDescriptor;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.typeinfo.Types;
-
-// Broadcast Stream 实现规则热更新
-MapStateDescriptor<String, Rule> ruleStateDescriptor =
-    new MapStateDescriptor<>("rules", Types.STRING, Types.POJO(Rule.class));
-
-BroadcastStream<Rule> ruleStream = env
-    .addSource(new RuleSource())
-    .broadcast(ruleStateDescriptor);
-
-transactionStream
-    .connec...
-```
-
-### `CASE-STUDIES.md` (第 602 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 用户实时行为特征：最近1小时浏览品类
-DataStream<UserFeature> userFeatureStream = env
-    .addSource(new UserBehaviorSource())
-    .keyBy(UserBehavior::getUserId)
-    .window(SlidingEventTimeWindows.of(
-        Time.hours(1),    // 窗口大小
-        Time.minutes(5)   // 滑动间隔
-    ))
-    .aggregate(new CategoryAggregator(...
-```
-
-### `CASE-STUDIES.md` (第 719 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// LocalKeyBy：本地预聚合减少网络 shuffle
-DataStream<Order> preAggregated = orderStream
-    .keyBy(Order::getItemId)
-    .window(ProcessingTimeWindows.of(Time.seconds(1)))
-    .aggregate(new LocalSumAggregate())
-    .keyBy(Order::getItemId)
-    .process(new GlobalSumProcess());
-
-// 分桶打散热点Key
-DataStream<Order>...
-```
-
-### `CASE-STUDIES.md` (第 789 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.configuration.Configuration;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.configuration.Configuration;                                           ...
-
-**代码预览**:
-
-```java
-// 开启Mini-Batch聚合
-Configuration config = new Configuration();
-config.setBoolean("table.exec.mini-batch.enabled", true);
-config.set("table.exec.mini-batch.allow-latency", "1s");
-config.setLong("table.exec.mini-batch.size", 5000);
-
-```
-
-### `CASE-STUDIES.md` (第 799 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 需要<标识符>     rocksDb.setPredefinedOptions(PredefinedOptions.FLASH_SSD_OPTIMIZED);                                 ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 需要<标识符>     rocksDb.setPredefinedOptions(PredefinedOptions.FLAS...
-
-**代码预览**:
-
-```java
-// RocksDB调优
-RocksDBStateBackend rocksDb = new RocksDBStateBackend("hdfs://checkpoints");
-rocksDb.setPredefinedOptions(PredefinedOptions.FLASH_SSD_OPTIMIZED);
-rocksDb.setOptions(new RocksDBOptionsFactory() {
-    @Override
-    public DBOptions createDBOptions(DBOptions currentOptions) {
-        retur...
-```
-
-### `CASE-STUDIES.md` (第 884 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\ThresholdMonitorFunction.java:2: 错误: 未命名类 是预览功能，默认情况下禁用。 DataStream<SensorData> processed = env ^   （请使用 --enable-preview 以启用 未命名类） 1 个错误
-
-**代码预览**:
-
-```java
-// 边缘网关：数据清洗+阈值告警
-DataStream<SensorData> processed = env
-    .addSource(new ModbusSource())
-    .map(new SensorDataParser())
-    .filter(data -> data.getValue() > 0) // 过滤无效值
-    .keyBy(SensorData::getSensorId)
-    .process(new ThresholdMonitorFunction());
-
-// 阈值监控函数
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-class ThresholdMonitorFunction e...
-```
-
-### `CASE-STUDIES.md` (第 1131 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\AntiCheatProcessFunction.java:2: 错误: 未命名类 是预览功能，默认情况下禁用。 DataStream<PlayerAction> actionStream = env ^   （请使用 --enable-preview 以启用 未命名类） 1 个错误
-
-**代码预览**:
-
-```java
-// 操作日志实时分析
-DataStream<PlayerAction> actionStream = env
-    .addSource(new GameLogSource())
-    .keyBy(PlayerAction::getPlayerId)
-    .process(new AntiCheatProcessFunction());
-
-// 外挂检测：异常点击频率
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-class AntiCheatProcessFunction extends KeyedProcessFunction<String, PlayerAction, Alert> {
-    private ListS...
-```
-
-### `CASE-STUDIES.md` (第 1419 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-// 日志模式识别
-DataStream<LogEvent> parsedLogs = env
-    .addSource(new KafkaSource<>())
-    .map(new LogParser())
-    .keyBy(LogEvent::getService);
-
-// 异常日志检测：错误率突增
-DataStream<Alert> errorAlerts = parsedLogs
-    .filter(log -> log.getLevel().equals("ERROR"))
-    .window(SlidingEventTimeWindows.of(Time.m...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 36 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.table.api.TableEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.table.api.TableEnvironment;                                             ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.table.api.TableEnvironment;
-
-// Flink Table API模型推理
-EnvironmentSettings settings = EnvironmentSettings.inStreamingMode();
-TableEnvironment tEnv = TableEnvironment.create(settings);
-
-// 创建模型
-tEnv.createModel(
-    "translation_model",
-    ModelDescriptor.forProvider("openai")
-        .inputSchema(Schema.newBuilder().column("input...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 54 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// Set Watermark generation strategy, allowing 5 seconds of disorder
-// This value is determined based on business latency distribution
-WatermarkStrategy<Event> strategy = WatermarkStrategy
-    .<Event>forBoundedOutOfOrderness(Duration.ofSeconds(5))
-    .withTimestampAssigner((event, timestamp) -> e...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 68 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// 设置 Watermark 生成策略，允许 5 秒乱序
-// 这是根据业务延迟分布确定的值
-WatermarkStrategy<Event> strategy = WatermarkStrategy
-    .<Event>forBoundedOutOfOrderness(Duration.ofSeconds(5))
-    .withTimestampAssigner((event, timestamp) -> event.getEventTime());
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 83 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-// 内存测试模式
-@Test
-public void testPipeline() {
-    StreamExecutionEnvironment env =
-        StreamExecutionEnvironment.getExecutionEnvironment();
-    env.setParallelism(2);
-
-    // 测试逻辑...
-
-    env.execute();
-}
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 104 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.CheckpointingMode;
-
-// 创建执行环境
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 配置Checkpoint
-env.enableCheckpointing(60000); // 60秒
-env.getCheckpointConfig().setCheckpointingMode(
-    CheckpointingMode.EXACTLY_ONCE);
-
-// 读取数据源
-DataStream<Event> stream = env
-    .addSource(ne...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 125 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要<标识符>     env.disableOperatorChaining(); // 仅调试时使用                                ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:6: 错误: 需要<标识符>     stream.map(...).startNewChain().filter(...);               ^ C:\Users\luyan\AppD...
-
-**代码预览**:
-
-```java
-// 允许算子链（默认）
-env.disableOperatorChaining(); // 仅调试时使用
-
-// 自定义算子链
-stream.map(...).startNewChain().filter(...);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 140 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要<标识符>     env.getConfig().setAutoWatermarkInterval(200);                  ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要';'     env.getConfig().setAutoWatermarkInterval(200);                    ^ C:\Users\luyan\AppData...
-
-**代码预览**:
-
-```java
-// 配置网络缓冲区
-env.getConfig().setAutoWatermarkInterval(200);
-
-// 配置Checkpoint超时
-env.getCheckpointConfig().setCheckpointTimeout(600000);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 155 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.CheckpointingMode;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.CheckpointingMode;                                   ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.CheckpointingMode;
-
-// 官方文档示例
-env.enableCheckpointing(60000);
-env.getCheckpointConfig().setCheckpointingMode(CheckpointingMode.EXACTLY_ONCE);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 206 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\CustomMetricRichFunction.java:7: 错误: 需要'{' public class CustomMetricRichFunction extends RichMapFuncti...                                                            ^ 1 个错误
-
-**代码预览**:
-
-```java
-import org.apache.flink.metrics.Counter;
-import org.apache.flink.metrics.Gauge;
-import org.apache.flink.metrics.Histogram;
-import org.apache.flink.metrics.MetricGroup;
-import org.apache.flink.runtime.metrics.DescriptiveStatisticsHistogram;
-
-public class CustomMetricRichFunction extends RichMapFuncti...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 222 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// Flink实时特征工程示例
-DataStream<FeatureVector> realTimeFeatures = events
-    .keyBy(Event::getUserId)
-    .window(SlidingEventTimeWindows.of(Time.hours(1), Time.minutes(5)))
-    .aggregate(new FeatureAggregator())
-    .map(features -> {
-        // 实时计算统计特征
-        features.setCtr(calculateCTR(features))...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 239 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.cep.Pattern;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.cep.Pattern;                                        ^ C:\Users\luyan\AppData\Local\Temp...
-
-**代码预览**:
-
-```java
-// CEP模式定义示例
-// 模式1: 地理位置异常（30分钟内跨500km以上）
-Pattern<EnrichedTransaction, ?> geoPattern = Pattern
-    .<EnrichedTransaction>begin("first")
-    .where(new SimpleCondition<EnrichedTransaction>() {
-        @Override
-        public boolean filter(EnrichedTransaction txn) {
-            return txn.getGeoLoc...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 256 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\SessionFeatureAggregate.java:9: 错误: 不是语句         switc...         ^ C:\Users\luyan\AppData\Local\Temp\SessionFeatureAggregate.java:9: 错误: 需要';'         switc...              ^ C:\Users\luyan\AppData\Local\Temp\SessionFeatureAggregate.java:9: 错误: 进行语法分析时已到达文件结尾      ...
-
-**代码预览**:
-
-```java
-// 会话特征聚合实现
-
-import org.apache.flink.api.common.functions.AggregateFunction;
-
-class SessionFeatureAggregate implements AggregateFunction<UserEvent, SessionAccumulator, SessionFeature> {
-
-    @Override
-    public SessionAccumulator add(UserEvent event, SessionAccumulator acc) {
-        acc.eventCount++;
-        acc.uniqueItems.add(event.getItemId());
-
-        switc...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 274 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\StreamingWordCount.java:7: 错误: 需要';'         DataStream<String> text = env.socketTextStream("localhost", 9999)...                                                                          ^ C:\Users\luyan\AppData\Local\Temp\StreamingWordCount.java:7: 错误: 进行语法分析时已到达文件...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-public class StreamingWordCount {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 从Socket读取数据
-        DataStream<String> text = env.socketTextStream("localhost", 9999)...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 290 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 每5分钟统计各品类销售额
-DataStream<SalesRecord> sales = ...;
-
-DataStream<CategoryStats> stats = sales
-    .keyBy(SalesRecord::getCategory)
-    .window(TumblingEventTimeWindows.of(Time.minutes(5)))
-    .aggregate(new SalesAggregator());
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 307 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 订单流与支付流Join
-DataStream<Order> orders = ...;
-DataStream<Payment> payments = ...;
-
-DataStream<EnrichedOrder> enriched = orders
-    .keyBy(Order::getOrderId)
-    .intervalJoin(payments.keyBy(Payment::getOrderId))
-    .between(Time.minutes(-5), Time.minutes(5))
-    .process(new OrderPaymentJoin());
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 326 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.cep.Pattern;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.cep.Pattern;                                        ^ C:\Users\luyan\AppData\Local\Temp...
-
-**代码预览**:
-
-```java
-// 检测登录异常：5分钟内3次失败登录
-Pattern<LoginEvent, ?> loginFailPattern = Pattern
-    .<LoginEvent>begin("first")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .next("second")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .next("third")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .wit...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 344 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-import org.apache.flink.api.common.functions.FlatMapFunction;
-import org.apache.flink.api.java.tuple.Tuple2;
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.environment.StreamExecutionE...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 358 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.configuration.Configuration;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.configuration.Configuration;                                           ...
-
-**代码预览**:
-
-```java
-// Enable Prometheus metrics reporter
-Configuration conf = new Configuration();
-conf.setString("metrics.reporters", "prometheus");
-conf.setString("metrics.reporter.prometheus.class",
-    "org.apache.flink.metrics.prometheus.PrometheusReporter");
-conf.setString("metrics.reporter.prometheus.port", "92...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 373 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.table.api.DataTypes;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.table.api.DataTypes;                                                ^ C:\Users\...
-
-**代码预览**:
-
-```java
-import org.apache.flink.table.api.DataTypes;
-import org.apache.flink.table.api.Schema;
-
-import org.apache.flink.api.common.typeinfo.Types;
-
-
-// 编程方式定义 Schema
-Schema schema = Schema.newBuilder()
-    .column("user_id", DataTypes.BIGINT().notNull())
-    .column("username", DataTypes.VARCHAR(128))
-    .column("tags", DataTypes.ARRAY(DataTypes.STRING()))
- ...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 391 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.CheckpointingMode;
-
-// DataStream API 代码示例
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 依赖 Core 层 Checkpoint 机制
-env.enableCheckpointing(60000);
-env.getCheckpointConfig().setCheckpointingMode(
-    CheckpointingMode.EXACTLY_ONCE
-);
-
-// 依赖 Core 层 State Backend
-env.setState...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 412 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.table.api.TableEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.table.api.TableEnvironment;                                             ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.table.api.TableEnvironment;
-
-// Table API 代码示例
-TableEnvironment tableEnv = TableEnvironment.create(
-    EnvironmentSettings.inStreamingMode()
-);
-
-// 编译为执行计划后，需要 Runtime 层的 Deployment 模块部署执行
-tableEnv.executeSql("INSERT INTO sink SELECT * FROM source");
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 429 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:11: 错误: 需要<标识符>     source.setStartFromLatest();                              ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:12: 错误: 需要<标识符>     source.se...              ^ 2 个错误
-
-**代码预览**:
-
-```java
-// 来自 case-iot-stream-processing.md 的最佳实践
-// 基于 flink-connectors-ecosystem-complete-guide.md 的指导
-
-// 1. 使用 Exactly-Once Source
-FlinkKafkaConsumer<Event> source = new FlinkKafkaConsumer<>(
-    "iot-events",
-    new EventDeserializationSchema(),
-    properties
-);
-source.setStartFromLatest();
-source.se...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 449 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.connector.elasticsearch.sink.Elasticsearch7SinkBuilder;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.connector.elasticsearch.sink.Elasticsearch7S...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.elasticsearch.sink.Elasticsearch7SinkBuilder;
-import org.apache.flink.connector.elasticsearch.sink.ElasticsearchEmitter;
-import org.apache.http.HttpHost;
-import org.elasticsearch.action.index.IndexRequest;
-import org.elasticsearch.client.Requests;
-
-import java.util....
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 465 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:12: 错误: 非法的表达式开始       ...       ^ 1 个错误
-
-**代码预览**:
-
-```java
-// 高级配置示例
-ElasticsearchSink<Event> esSink = new Elasticsearch7SinkBuilder<Event>()
-    // 批量配置
-    .setBulkFlushMaxActions(1000)
-    .setBulkFlushMaxSizeMb(5)
-    .setBulkFlushInterval(5000)
-
-    // 重试配置
-    .setBulkFlushBackoffStrategy(
-        ElasticsearchSinkBase.FlushBackoffType.EXPONENTIAL,
-  ...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 485 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// Watermark策略：业务时间 + 200ms延迟
-WatermarkStrategy<Transaction> strategy = WatermarkStrategy
-    .<Transaction>forBoundedOutOfOrderness(Duration.ofMillis(200))
-    .withIdleness(Duration.ofSeconds(30));
-
-// CEP模式：3分钟内同一卡号在3个不同国家交易
-Pattern<Transaction, ?> suspiciousPattern = Pattern
-    .<Transaction>be...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 502 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.state.MapStateDescriptor;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.state.MapStateDescriptor;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.typeinfo.Types;
-
-// Broadcast Stream 实现规则热更新
-MapStateDescriptor<String, Rule> ruleStateDescriptor =
-    new MapStateDescriptor<>("rules", Types.STRING, Types.POJO(Rule.class));
-
-BroadcastStream<Rule> ruleStream = env
-    .addSource(new RuleSource())
-    .broadcast(ruleStateDescriptor);
-
-transactionStream
-    .connec...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 521 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// LocalKeyBy：本地预聚合减少网络 shuffle
-DataStream<Order> preAggregated = orderStream
-    .keyBy(Order::getItemId)
-    .window(ProcessingTimeWindows.of(Time.seconds(1)))
-    .aggregate(new LocalSumAggregate())
-    .keyBy(Order::getItemId)
-    .process(new GlobalSumProcess());
-
-// 分桶打散热点Key
-DataStream<Order>...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 540 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.configuration.Configuration;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.configuration.Configuration;                                           ...
-
-**代码预览**:
-
-```java
-// 开启Mini-Batch聚合
-Configuration config = new Configuration();
-config.setBoolean("table.exec.mini-batch.enabled", true);
-config.set("table.exec.mini-batch.allow-latency", "1s");
-config.setLong("table.exec.mini-batch.size", 5000);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 555 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 需要<标识符>     rocksDb.setPredefinedOptions(PredefinedOptions.FLASH_SSD_OPTIMIZED);                                 ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 需要<标识符>     rocksDb.setPredefinedOptions(PredefinedOptions.FLAS...
-
-**代码预览**:
-
-```java
-// RocksDB调优
-RocksDBStateBackend rocksDb = new RocksDBStateBackend("hdfs://checkpoints");
-rocksDb.setPredefinedOptions(PredefinedOptions.FLASH_SSD_OPTIMIZED);
-rocksDb.setOptions(new RocksDBOptionsFactory() {
-    @Override
-    public DBOptions createDBOptions(DBOptions currentOptions) {
-        retur...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 571 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\ThresholdMonitorFunction.java:2: 错误: 未命名类 是预览功能，默认情况下禁用。 DataStream<SensorData> processed = env ^   （请使用 --enable-preview 以启用 未命名类） C:\Users\luyan\AppData\Local\Temp\ThresholdMonitorFunction.java:10: 错误: 需要'{' class ThresholdMonitorFunction e...                     ...
-
-**代码预览**:
-
-```java
-// 边缘网关：数据清洗+阈值告警
-DataStream<SensorData> processed = env
-    .addSource(new ModbusSource())
-    .map(new SensorDataParser())
-    .filter(data -> data.getValue() > 0) // 过滤无效值
-    .keyBy(SensorData::getSensorId)
-    .process(new ThresholdMonitorFunction());
-
-// 阈值监控函数
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-class ThresholdMonitorFunction e...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 590 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\AntiCheatProcessFunction.java:2: 错误: 未命名类 是预览功能，默认情况下禁用。 DataStream<PlayerAction> actionStream = env ^   （请使用 --enable-preview 以启用 未命名类） C:\Users\luyan\AppData\Local\Temp\AntiCheatProcessFunction.java:9: 错误: 需要<标识符>     private ListS...                  ^ C:\Users\l...
-
-**代码预览**:
-
-```java
-// 操作日志实时分析
-DataStream<PlayerAction> actionStream = env
-    .addSource(new GameLogSource())
-    .keyBy(PlayerAction::getPlayerId)
-    .process(new AntiCheatProcessFunction());
-
-// 外挂检测：异常点击频率
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-class AntiCheatProcessFunction extends KeyedProcessFunction<String, PlayerAction, Alert> {
-    private ListS...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 608 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-// 日志模式识别
-DataStream<LogEvent> parsedLogs = env
-    .addSource(new KafkaSource<>())
-    .map(new LogParser())
-    .keyBy(LogEvent::getService);
-
-// 异常日志检测：错误率突增
-DataStream<Alert> errorAlerts = parsedLogs
-    .filter(log -> log.getLevel().equals("ERROR"))
-    .window(SlidingEventTimeWindows.of(Time.m...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 627 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\DataTypeExample.java:10: 错误: 需要';'         return Schema.newBui...                             ^ C:\Users\luyan\AppData\Local\Temp\DataTypeExample.java:10: 错误: 进行语法分析时已到达文件结尾         return Schema.newBui...                                ^ 2 个错误
-
-**代码预览**:
-
-```java
-import org.apache.flink.table.api.DataTypes;
-import org.apache.flink.table.api.Schema;
-import org.apache.flink.table.api.Table;
-import org.apache.flink.table.api.TableDescriptor;
-
-public class DataTypeExample {
-
-    // 编程方式定义 Schema
-    public Schema createUserSchema() {
-        return Schema.newBui...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 646 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\LowLatencyRiskCheck.java:8: 错误: 进行语法分析时已到达文件结尾     public void open(Configuration parameters) {                                                 ^ 1 个错误
-
-**代码预览**:
-
-```java
-// 低延迟状态访问示例
-
-import org.apache.flink.api.common.state.ValueState;
-
-public class LowLatencyRiskCheck extends KeyedProcessFunction<String, Transaction, Alert> {
-
-    private ValueState<RuleCache> ruleState;
-    private ValueState<UserSession> sessionState;
-
-    @Override
-    public void open(Configuration parameters) {
-        // HashMapStateBackend 下状态直...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 664 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.windowing.assigners.TumblingEventTimeWindows;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.windowing.assigners.Tumbli...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-stream.keyBy(event -> event.getUserId())
-      .window(TumblingEventTimeWindows.of(Time.minutes(5)))
-      .aggregate(new CountAggregate());
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 677 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.state.ValueState;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.state.ValueState;                                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.state.ValueState;
-import org.apache.flink.api.common.state.ValueStateDescriptor;
-import org.apache.flink.api.common.typeinfo.Types;
-
-ValueStateDescriptor<Long> descriptor =
-    new ValueStateDescriptor<>("counter", Types.LONG);
-ValueState<Long> counter = getRuntimeContext().getState(descriptor);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 690 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     env.setParallelism(4);  // Global parallelism                       ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     env.setParallelism(4);  // Global parallelism                        ^ C:\Users\luya...
-
-**代码预览**:
-
-```java
-env.setParallelism(4);  // Global parallelism
-operator.setParallelism(8);  // Operator-specific
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 702 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     env.setStateBackend(new EmbeddedRocksDBStateBackend());                        ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     env.setStateBackend(new EmbeddedRocksDBStateBackend());                  ...
-
-**代码预览**:
-
-```java
-env.setStateBackend(new EmbeddedRocksDBStateBackend());
-env.getCheckpointConfig().setCheckpointStorage("hdfs:///checkpoints");
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 714 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.windowing.assigners.EventTimeSessionWindows;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.windowing.assigners.EventTi...
-
-**代码预览**:
-
-```java
-stream.keyBy(Event::getUserId)
-      .window(EventTimeSessionWindows.withDynamicGap(...))
-      .aggregate(...);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 727 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.windowing.assigners.TumblingEventTimeWindows;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.windowing.assigners.Tumbli...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-stream.window(TumblingEventTimeWindows.of(Time.minutes(5)))
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 738 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.jdbc.JdbcConnectionOptions;
-import org.apache.flink.connector.jdbc.JdbcExecutionOptions;
-import org.apache.flink.connector.jdbc.JdbcSink;
-import org.apache.flink.connector.jdbc.JdbcStatementBuilder;
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-
-// JDBC Sink 配置
-DataStream<Order> orderStream = ...;
-
-orderStream....
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 756 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.connector.jdbc.JdbcInputFormat;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.connector.jdbc.JdbcInputFormat;                                     ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.jdbc.JdbcInputFormat;
-import org.apache.flink.api.common.typeinfo.BasicTypeInfo;
-import org.apache.flink.api.java.DataSet;
-import org.apache.flink.api.java.ExecutionEnvironment;
-
-DataSet<Row> dbData = env.createInput(
-    JdbcInputFormat.buildJdbcInputFormat()
-     ...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 773 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:8: 错误: 需要';'         .setDeserializationSc...                              ^ 1 个错误
-
-**代码预览**:
-
-```java
-// Flink Pulsar Source 配置
-PulsarSource<String> source = PulsarSource.builder()
-    .setServiceUrl("pulsar://localhost:6650")
-    .setAdminUrl("http://localhost:8080")
-    .setStartCursor(StartCursor.earliest())
-    .setTopics("persistent://public/default/processed-sensors")
-    .setDeserializationSc...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 789 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.connector.mongodb.source.MongoSource;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.connector.mongodb.source.MongoSource;                         ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.mongodb.source.MongoSource;
-import org.apache.flink.connector.mongodb.source.reader.deserializer.MongoDeserializationSchema;
-import org.bson.BsonDocument;
-import org.bson.Document;
-
-// MongoDB Source 配置
-MongoSource<Document> mongoSource = MongoSource.<Document>build...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 805 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.connector.mongodb.source.MongoSource;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.connector.mongodb.source.MongoSource;                         ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.mongodb.source.MongoSource;
-import org.apache.flink.connector.mongodb.source.enumerator.splitter.MongoSplitters;
-
-// Change Stream Source 配置
-MongoSource<ChangeStreamDocument<Document>> changeStreamSource =
-    MongoSource.<ChangeStreamDocument<Document>>builder()
-  ...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 821 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.connector.mongodb.sink.MongoSink;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.connector.mongodb.sink.MongoSink;                                 ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.connector.mongodb.sink.MongoSink;
-import org.apache.flink.connector.mongodb.sink.writer.context.MongoSinkContext;
-import org.bson.Document;
-
-// MongoDB Sink 配置
-MongoSink<Document> mongoSink = MongoSink.<Document>builder()
-    .setUri("mongodb://user:password@localhost:27017")...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 837 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:10: 错误: 需要<标识符>     stream.addSink(kafkaProducer);                   ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:10: 错误: 需要<标识符>     stream.addSink(kafkaProducer);                                 ^ 2 个错误
-
-**代码预览**:
-
-```java
-// Flink Kafka Producer 配置
-FlinkKafkaProducer<String> kafkaProducer = new FlinkKafkaProducer<>(
-    "processed-events",
-    new JsonSerializer(),
-    kafkaProperties,
-    FlinkKafkaProducer.Semantic.EXACTLY_ONCE
-);
-
-stream.addSink(kafkaProducer);
-
-
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 857 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-// DataStream.java
-public <R> SingleOutputStreamOperator<R> flatMap(
-        FlatMapFunction<T, R> flatMapper) {
-    // 获取类型信息
-    TypeInformation<R> outType = TypeExtractor.getFlatMapReturnTypes(
-        clean(flatMapper), getType(), Utils.getCallLocationName(), true);
-
-    // 创建转换节点
-    return tra...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 870 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.datastream.SingleOutputStreamOperator;
-import org.apache.flink.api.common.functions.FlatMapFunction;
-import org.apache.flink.api.common.typeinfo.TypeInformation;
-
-// DataStream.java
-public <R> SingleOu...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 886 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:9: 错误: 需要')'             ((AsyncSnapshotStrategy) stateHandler...                                                  ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:9: 错误: 不是语句             ((AsyncSnapshotStrategy) stateHandler...           ...
-
-**代码预览**:
-
-```java
-// 源码位置: AbstractStreamOperator.java
-public void snapshotState(StateSnapshotContext context) throws Exception {
-    // 1. 同步部分 - 在Task线程执行
-    snapshotStateSync(context);
-
-    // 2. 异步部分 - 可能在线程池执行
-    if (stateHandler instanceof AsyncSnapshotStrategy) {
-        ((AsyncSnapshotStrategy) stateHandler...
-```
-
-### `CODE-VALIDATION-JAVA-REPORT.md` (第 898 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.state.ListState;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.state.ListState;                                             ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.api.common.state.ListState;
-
-// 源码位置: AbstractStreamOperator.java
-public void snapshotState(StateSnapshotContext context) throws Exception {
-    // 1. 同步部分 - 在Task线程执行
-    snapshotStateSync(context);
-
-    // 2. 异步部分 - 可能在线程池执行
-    if (stateHandler instanceof AsyncSnapshotStra...
-```
-
-### `CONTRIBUTING-EN.md` (第 909 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// Set Watermark generation strategy, allowing 5 seconds of disorder
-// This value is determined based on business latency distribution
-WatermarkStrategy<Event> strategy = WatermarkStrategy
-    .<Event>forBoundedOutOfOrderness(Duration.ofSeconds(5))
-    .withTimestampAssigner((event, timestamp) -> e...
-```
-
-### `CONTRIBUTING.md` (第 949 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.api.common.eventtime.WatermarkStrategy;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.api.common.eventtime.WatermarkStrategy;                     ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// 设置 Watermark 生成策略，允许 5 秒乱序
-// 这是根据业务延迟分布确定的值
-WatermarkStrategy<Event> strategy = WatermarkStrategy
-    .<Event>forBoundedOutOfOrderness(Duration.ofSeconds(5))
-    .withTimestampAssigner((event, timestamp) -> event.getEventTime());
-
-```
-
-### `DEPLOYMENT-ARCHITECTURES.md` (第 196 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-// 内存测试模式
-@Test
-public void testPipeline() {
-    StreamExecutionEnvironment env =
-        StreamExecutionEnvironment.getExecutionEnvironment();
-    env.setParallelism(2);
-
-    // 测试逻辑...
-
-    env.execute();
-}
-
-```
-
-### `FAQ.md` (第 382 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\AIAgentExample.java:2: 错误: 程序包org.apache.flink.streaming.api.environment不存在 import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;                                                  ^ C:\Users\luyan\AppData\Local\Temp\AIAgentExample.java:1: 错误: ...
-
-**代码预览**:
-
-```java
-import org.apache.flink.ai.agents.*;
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-public class AIAgentExample {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecution...
-```
-
-### `FAQ.md` (第 432 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 找不到符号     AIAgentConfig config = AIAgentConfig.builder()     ^   符号:   类 AIAgentConfig   位置: 类 TempValidation C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 找不到符号         .setFallbackStrategy(FallbackStrategy.CIRCUIT_BREAKER)...
-
-**代码预览**:
-
-```java
-// 配置故障转移策略
-AIAgentConfig config = AIAgentConfig.builder()
-    .setFallbackStrategy(FallbackStrategy.CIRCUIT_BREAKER)
-    .setCircuitBreakerThreshold(5)
-    .setCircuitBreakerWindow(Duration.ofMinutes(1))
-    .setFallbackModel("gpt-3.5-turbo")  // 降级模型
-    .build();
-
-```
-
-### `FAQ.md` (第 498 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-// Serverless 作业提交
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getServerlessEnvironment();
-
-// 启用自动扩缩容
-env.configure(ServerlessOptions.AUTO_SCALING, true);
-env.configure(ServerlessOptions.MIN_PARALLELISM, 2);
-env.configure(ServerlessOptions.MAX_PARALLELISM, 100);
-
-// 作业逻辑与普通模式相同
-...
-```
-
-### `FAQ.md` (第 549 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 启用智能检查点
-CheckpointConfig checkpointConfig = env.getCheckpointConfig();
-checkpointConfig.enableSmartCheckpointing(true);
-
-// 智能检查点配置
-checkpointConfig.configure(SmartCheckpointOptions.builder()
-    // 目标恢复时间...
-```
-
-### `FAQ.md` (第 615 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:5: 错误: 需要<标识符>     System.out.println("预测准确率: " + metrics.getPredictionAccuracy());                       ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:5: 错误: 非法的类型开始     System.out.println("预测准确率: " + metrics.getPredictionAccuracy()); ...
-
-**代码预览**:
-
-```java
-// 获取智能检查点指标
-SmartCheckpointMetrics metrics = checkpointConfig.getSmartMetrics();
-
-System.out.println("预测准确率: " + metrics.getPredictionAccuracy());
-System.out.println("节省的检查点次数: " + metrics.getSavedCheckpoints());
-System.out.println("平均恢复时间: " + metrics.getAvgRecoveryTime());
-System.out.println("当前建...
-```
-
-### `FAQ.md` (第 642 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\UnifiedStreamingBatch.java:2: 错误: 找不到符号 import org.apache.flink.table.api.bridge.java.StreamTableEnvironment;                                              ^   符号:   类 StreamTableEnvironment   位置: 程序包 org.apache.flink.table.api.bridge.java C:\Users\luyan\AppData\Loca...
-
-**代码预览**:
-
-```java
-import org.apache.flink.table.api.*;
-import org.apache.flink.table.api.bridge.java.StreamTableEnvironment;
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.table.api.TableEnvironment;
-
-
-public class UnifiedStreamingBatch {
-    public static void main(String[] args) {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-   ...
-```
-
-### `FAQ.md` (第 756 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-// DataStream API 同样支持流批统一
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 自适应源 - 自动识别流/批模式
-AdaptiveSource<String> source = AdaptiveSource
-    .<String>builder()
-    .setStreamingFactory(new KafkaSourceFactory<>())
-    .setBatchFactory(new FileSourceFac...
-```
-
-### `FAQ.md` (第 806 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\GPUDetectionFunction.java:2: 错误: 未命名类 是预览功能，默认情况下禁用。 StreamExecutionEnvironment env = ^   （请使用 --enable-preview 以启用 未命名类） 1 个错误
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-// GPU 加速的 ML 推理
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 配置 GPU 资源
-GPUResource gpuResource = new GPUResource.Builder()
-    .setGPUCount(1)
-    .setMemoryGB(16)
-    .setGPUType(GPUType.NVIDIA_T4)
-    .build();
-
-// 创建 GPU 加速算子
-DataStream<Image> im...
-```
-
-### `FAQ.md` (第 892 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\GPUBenchmark.java:4: 错误: 找不到符号         StreamExecutionEnvironment env =         ^   符号:   类 StreamExecutionEnvironment   位置: 类 GPUBenchmark C:\Users\luyan\AppData\Local\Temp\GPUBenchmark.java:5: 错误: 找不到符号             StreamExecutionEnvironment.getExecutionEnvironmen...
-
-**代码预览**:
-
-```java
-// GPU vs CPU 性能对比测试
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-public class GPUBenchmark {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        DataStream<Tensor> input = env.addSource(new TensorSource());
-
-        //...
-```
-
-### `FAQ.md` (第 1024 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.table.api.TableEnvironment;
-
-// Java API 注册 WASM UDF
-StreamTableEnvironment tableEnv = ...;
-
-// 1. 注册 WASM 模块
-tableEnv.executeSql("""
-    CREATE FUNCTION string_len
-    AS WASM
-    FROM 'file:///opt/flink/udfs/string_len.wasm'
-    WITH (
-        'language' = 'rust',
-        'entry-point' = 'string_len',
-        'sandbox' = 'str...
-```
-
-### `FAQ.md` (第 1240 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 需要<标识符>     env.setStateBackend(new RocksDBStateBackend("hdfs://checkpoints", true));                        ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:3: 错误: 非法的类型开始     env.setStateBackend(new RocksDBStateBackend("hdfs://che...
-
-**代码预览**:
-
-```java
-// Flink 2.3 代码
-env.setStateBackend(new RocksDBStateBackend("hdfs://checkpoints", true));
-
-// Flink 2.4 新 API (旧 API 仍兼容但已标记废弃)
-env.setStateBackend(new EmbeddedRocksDBStateBackend(true));
-env.getCheckpointConfig().setCheckpointStorage("hdfs://checkpoints");
-
-// 2.4 新增: AI Agent 集成 (可选)
-// 注: ai.agen...
-```
-
-### `FAQ.md` (第 1293 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:13: 错误: 需要<标识符>     tableEnv.executeSql("CREATE FUNCTION ... AS WASM ...");                        ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:13: 错误: 非法的类型开始     tableEnv.executeSql("CREATE FUNCTION ... AS WASM ...");                ...
-
-**代码预览**:
-
-```java
-// 2.4: 旧方式设置 GPU 资源
-GPUResource resource = new GPUResource(1, 16);
-
-// 2.5: 新 Builder 模式 (推荐)
-GPUResource resource = new GPUResource.Builder()
-    .setGPUCount(1)
-    .setMemoryGB(16)
-    .setGPUType(GPUType.NVIDIA_A10)
-    .build();
-
-// 2.4: WASM UDF 基础支持
-tableEnv.executeSql("CREATE FUNCTION ... A...
-```
-
-### `FAQ.md` (第 1368 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\CompatibilityCheck.java:4: 错误: 找不到符号         StreamExecutionEnvironment env =         ^   符号:   类 StreamExecutionEnvironment   位置: 类 CompatibilityCheck C:\Users\luyan\AppData\Local\Temp\CompatibilityCheck.java:5: 错误: 找不到符号             StreamExecutionEnvironment.getE...
-
-**代码预览**:
-
-```java
-// 验证作业兼容性
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-public class CompatibilityCheck {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 启用严格兼容性检查
-        env.getConfig().setBoolean(
-            "compatibility.s...
-```
-
-### `FAQ.md` (第 1425 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 1. 逐步迁移到 Table API (推荐)
-// 旧: DataStream API
-DataStream<Row> result = env
-    .addSource(new KafkaSource<>())
-    .map(new Deserializer())
-    .keyBy(r -> r.getField(0))
-    .window(TumblingEventTimeWindows.of(Time.minutes(5)))
-    .aggregate(new MyAggregate());
-
-// 新: Table API (3.0 主推)
-Table re...
-```
-
-### `FAQ.md` (第 1502 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\MigrationCompatibilityTest.java:2: 错误: 找不到符号 @RunWith(FlinkCompatibilityRunner.class)  ^   符号: 类 RunWith C:\Users\luyan\AppData\Local\Temp\MigrationCompatibilityTest.java:3: 错误: 找不到符号 @CompatibilityVersion(from = "2.5", to = "3.0")  ^   符号: 类 CompatibilityVersion C:...
-
-**代码预览**:
-
-```java
-// 3.0 兼容性测试
-@RunWith(FlinkCompatibilityRunner.class)
-@CompatibilityVersion(from = "2.5", to = "3.0")
-
-import org.apache.flink.api.common.state.ValueState;
-
-public class MigrationCompatibilityTest {
-
-    @Test
-    public void testStateMigration() throws Exception {
-        // 测试状态格式兼容性
-        StateDescriptor<ValueState<Integer>> descriptor =
-          ...
-```
-
-### `FAQ.md` (第 1589 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 需要<标识符>     env.enableCheckpointing(5000);  // 每5秒，无论负载                            ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:4: 错误: 非法的类型开始     env.enableCheckpointing(5000);  // 每5秒，无论负载                             ^ C:\User...
-
-**代码预览**:
-
-```java
-// 1. 智能检查点带来的提升
-// 2.3: 固定间隔检查点 (资源浪费)
-env.enableCheckpointing(5000);  // 每5秒，无论负载
-
-// 2.4: 智能自适应检查点 (节省资源)
-env.getCheckpointConfig().enableSmartCheckpointing(true);
-// 实际效果: 低负载时延长到30s，高负载时缩短到2s
-// 节省约 30% 的检查点开销
-
-// 2. 状态后端优化
-// 2.3: RocksDB 基础配置
-RocksDBStateBackend backend = new RocksDBStateBack...
-```
-
-### `FAQ.md` (第 1612 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\PerformanceBenchmark.java:4: 错误: 找不到符号         StreamExecutionEnvironment env =         ^   符号:   类 StreamExecutionEnvironment   位置: 类 PerformanceBenchmark C:\Users\luyan\AppData\Local\Temp\PerformanceBenchmark.java:5: 错误: 找不到符号             StreamExecutionEnvironmen...
-
-**代码预览**:
-
-```java
-// 基准测试作业
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-public class PerformanceBenchmark {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 配置 for 最大吞吐
-        env.setParallelism(16);
-        env.setBufferTimeout(...
-```
-
-### `FAQ.md` (第 1687 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-// 启用 2.4 所有优化
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 1. 智能检查点
-env.getCheckpointConfig().enableSmartCheckpointing(true);
-
-// 2. 增量检查点 (默认启用)
-env.getCheckpointConfig().enableIncrementalCheckpoints(true);
-
-// 3. 非对齐检查点 (低延迟场景)
-env.getCheckpointCo...
-```
-
-### `FAQ.md` (第 1720 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\AIAgentPerformanceTest.java:43: 错误: 类 MetricsExtractor 是公共的, 应在名为 MetricsExtractor.java 的文件中声明 public class MetricsExtractor implements MapFunction<AIResponse, Metrics> {        ^ C:\Users\luyan\AppData\Local\Temp\AIAgentPerformanceTest.java:43: 错误: 找不到符号 public cla...
-
-**代码预览**:
-
-```java
-// AI Agent 性能测试
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-
-public class AIAgentPerformanceTest {
-
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 创建 AI Agent
-        AIAgentConfig config = AIAgentConfig.builde...
-```
-
-### `FAQ.md` (第 1792 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\LoadTest.java:6: 错误: 找不到符号         Duration durationPerLevel = Duration.ofMinutes(5);         ^   符号:   类 Duration   位置: 类 LoadTest C:\Users\luyan\AppData\Local\Temp\LoadTest.java:6: 错误: 找不到符号         Duration durationPerLevel = Duration.ofMinutes(5);               ...
-
-**代码预览**:
-
-```java
-// 阶梯负载测试
-public class LoadTest {
-    public static void main(String[] args) throws Exception {
-
-        int[] rpsLevels = {10, 50, 100, 200, 500, 1000};
-        Duration durationPerLevel = Duration.ofMinutes(5);
-
-        for (int rps : rpsLevels) {
-            System.out.println("开始测试负载: " + rps + ...
-```
-
-### `FAQ.md` (第 1870 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-// 1. 启用语义缓存 (减少重复调用)
-AIAgentConfig config = AIAgentConfig.builder()
-    .setCacheEnabled(true)
-    .setCacheSimilarityThreshold(0.95)  // 相似度阈值
-    .setCacheTTL(Duration.ofMinutes(10))
-    .build();
-
-// 2. 批量处理
-DataStream<BatchRequest> batches = input
-    .keyBy(r -> r.getCategory())
-    .window(Tu...
-```
-
-### `INTEGRATED-GUIDE.md` (第 58 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.environment.StreamExecutionEnvir...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.CheckpointingMode;
-
-// 创建执行环境
-StreamExecutionEnvironment env =
-    StreamExecutionEnvironment.getExecutionEnvironment();
-
-// 配置Checkpoint
-env.enableCheckpointing(60000); // 60秒
-env.getCheckpointConfig().setCheckpointingMode(
-    CheckpointingMode.EXACTLY_ONCE);
-
-// 读取数据源
-DataStream<Event> stream = env
-    .addSource(ne...
-```
-
-### `OBSERVABILITY-GUIDE.md` (第 376 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\CustomMetricRichFunction.java:1: 错误: 程序包org.apache.flink.metrics不存在 import org.apache.flink.metrics.Counter;                                ^ C:\Users\luyan\AppData\Local\Temp\CustomMetricRichFunction.java:2: 错误: 程序包org.apache.flink.metrics不存在 import org.apache.flin...
-
-**代码预览**:
-
-```java
-import org.apache.flink.metrics.Counter;
-import org.apache.flink.metrics.Gauge;
-import org.apache.flink.metrics.Histogram;
-import org.apache.flink.metrics.MetricGroup;
-import org.apache.flink.runtime.metrics.DescriptiveStatisticsHistogram;
-
-public class CustomMetricRichFunction extends RichMapFuncti...
-```
-
-### `POSITIONING.md` (第 218 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.CheckpointingMode;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.CheckpointingMode;                                   ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.CheckpointingMode;
-
-// 官方文档示例
-env.enableCheckpointing(60000);
-env.getCheckpointConfig().setCheckpointingMode(CheckpointingMode.EXACTLY_ONCE);
-
-```
-
-### `PRACTICAL-EXAMPLES.md` (第 7 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\StreamingWordCount.java:19: 错误: 找不到符号     static class Tokenizer implements FlatMapFunction<String, Tuple2<String, Integer>> {                                       ^   符号:   类 FlatMapFunction   位置: 类 StreamingWordCount C:\Users\luyan\AppData\Local\Temp\StreamingWor...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-public class StreamingWordCount {
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env =
-            StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 从Socket读取数据
-        DataStream<String> text = env.socketTextStream("localhost", 9999)...
-```
-
-### `PRACTICAL-EXAMPLES.md` (第 39 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 每5分钟统计各品类销售额
-DataStream<SalesRecord> sales = ...;
-
-DataStream<CategoryStats> stats = sales
-    .keyBy(SalesRecord::getCategory)
-    .window(TumblingEventTimeWindows.of(Time.minutes(5)))
-    .aggregate(new SalesAggregator());
-
-```
-
-### `PRACTICAL-EXAMPLES.md` (第 51 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 订单流与支付流Join
-DataStream<Order> orders = ...;
-DataStream<Payment> payments = ...;
-
-DataStream<EnrichedOrder> enriched = orders
-    .keyBy(Order::getOrderId)
-    .intervalJoin(payments.keyBy(Payment::getOrderId))
-    .between(Time.minutes(-5), Time.minutes(5))
-    .process(new OrderPaymentJoin());
-
-```
-
-### `PRACTICAL-EXAMPLES.md` (第 65 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.cep.Pattern;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.cep.Pattern;                                        ^ C:\Users\luyan\AppData\Local\Temp...
-
-**代码预览**:
-
-```java
-// 检测登录异常：5分钟内3次失败登录
-Pattern<LoginEvent, ?> loginFailPattern = Pattern
-    .<LoginEvent>begin("first")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .next("second")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .next("third")
-    .where(evt -> evt.getStatus().equals("FAIL"))
-    .wit...
-```
-
-### `TROUBLESHOOTING.md` (第 192 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\SyncFunction.java:19: 错误: 未命名类 是预览功能，默认情况下禁用。 DataStream<Result> result = AsyncDataStream.unorderedWait( ^   （请使用 --enable-preview 以启用 未命名类） 1 个错误
-
-**代码预览**:
-
-```java
-// ❌ 低效：同步外部调用
-public class SyncFunction extends RichMapFunction<String, Result> {
-    @Override
-    public Result map(String value) {
-        return externalService.call(value); // 阻塞!
-    }
-}
-
-// ✅ 高效：异步外部调用
-public class AsyncExternalCall extends AsyncFunction<String, Result> {
-    @Override
-    p...
-```
-
-### `TROUBLESHOOTING.md` (第 265 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.windowing.time.Time;
-
-// 代码级别优化
-env.setBufferTimeout(100); // 减少Buffer等待时间
-
-// 算子链优化（避免不必要的序列化）
-DataStream<Result> result = input
-    .map(new FastMapper())     // 链在一起
-    .filter(new FastFilter())  // 链在一起
-    .keyBy(KeySelector)        // 断开链（需要shuffle）
-    .window(TumblingEventTimeWindows.of(Time.minutes(1)))
-    .ag...
-```
-
-### `TROUBLESHOOTING.md` (第 329 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
-
-**代码预览**:
-
-```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-
-// 第一阶段：加盐局部聚合
-DataStream<LocalAgg> localAgg = source
-    .map(new RichMapFunction<Event, Event>() {
-        private int salt;
-        @Override
-        public void open(Configuration parameters) {
-            salt = getRuntimeContext().getIndexOfThisSubtask();
-        }
-        @Override
-        pu...
-```
-
-### `TROUBLESHOOTING.md` (第 471 行)
-
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\IdempotentSink.java:18: 错误: 类 DeduplicateFunction 是公共的, 应在名为 DeduplicateFunction.java 的文件中声明 public class DeduplicateFunction extends KeyedProcessFunction<String, Event, Event> {        ^ C:\Users\luyan\AppData\Local\Temp\IdempotentSink.java:2: 错误: 找不到符号 public clas...
-
-**代码预览**:
-
-```java
-// 方案1: 幂等Sink（推荐）
-public class IdempotentSink extends RichSinkFunction<Event> {
-    private transient RedisClient redis;
-
-    @Override
-    public void invoke(Event value, Context context) {
-        String dedupKey = value.getEventId();
-        // 使用SETNX确保幂等
-        Boolean success = redis.setnx(d...
+TableEnvironment tEnv = TableEnvironment.create(setti...
 ```
-
-### `TROUBLESHOOTING.md` (第 559 行)
-
-- **问题类型**: syntax_error
-- **错误**: C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 非法的类型开始     import org.apache.flink.streaming.api.datastream.DataStream;     ^ C:\Users\luyan\AppData\Local\Temp\TempValidation.java:2: 错误: 需要<标识符>     import org.apache.flink.streaming.api.datastream.DataStream;                           ...
 
-**代码预览**:
+**建议添加的import**:
 
 ```java
-
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.api.common.eventtime.WatermarkStrategy;
-
-// 合理的Watermark策略
-WatermarkStrategy<Event> strategy = WatermarkStrategy
-    .<Event>forBoundedOutOfOrderness(Duration.ofSeconds(30))  // 最大乱序延迟
-    .withIdleness(Duration.ofMinutes(5))                       // 空闲检测
-    .withTimestampAssigner((event, timestamp) -> event.getEventTime());
-
-DataStream<E...
+import org.apache.flink.table.api.Table; // 用于 Table
 ```
-
-### `TROUBLESHOOTING.md` (第 616 行)
 
-- **问题类型**: missing_import
-- **错误**: C:\Users\luyan\AppData\Local\Temp\LateDataHandlingJob.java:5: 错误: 找不到符号         StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();         ^   符号:   类 StreamExecutionEnvironment   位置: 类 LateDataHandlingJob C:\Users\luyan\AppData\Local\Temp\LateDataHandlingJob.java...
+## 📋 改进建议
 
-**代码预览**:
+### 1. 添加缺失的Import语句
 
-```java
-// 迟到数据处理完整示例
-
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
+- 共有 1202 个代码块缺少必要的import语句
+- 常见需要添加的import包括Flink核心类、状态管理类、时间语义类等
 
-public class LateDataHandlingJob {
-
-    public static void main(String[] args) throws Exception {
-        StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();
-
-        // 侧输出标签
-        final OutputTag<Event> lateDataOutputTag = new OutputTag<Event>("LA...
-```
+### 2. 更新弃用API
 
-## ⚠️ 需要人工审核的复杂案例 (前50个)
+- 共有 3 个代码块使用弃用API
+- 主要弃用API：
+  - `setStreamTimeCharacteristic()` → 使用WatermarkStrategy
+  - `fold()` → 使用AggregateFunction
 
-共 **4477** 个案例需要人工处理，显示前50个：
+### 3. 修复语法问题
 
-- `AI-STREAMING-RESEARCH-REPORT-2024-2025.md` 第 590 行: syntax_error
-- `BEST-PRACTICES-COMPLETE.md` 第 25 行: syntax_error
-- `BEST-PRACTICES-COMPLETE.md` 第 39 行: syntax_error
-- `CASE-STUDIES.md` 第 263 行: syntax_error
-- `CASE-STUDIES.md` 第 487 行: syntax_error
-- `CASE-STUDIES.md` 第 602 行: syntax_error
-- `CASE-STUDIES.md` 第 719 行: syntax_error
-- `CASE-STUDIES.md` 第 789 行: syntax_error
-- `CASE-STUDIES.md` 第 799 行: syntax_error
-- `CASE-STUDIES.md` 第 884 行: syntax_error
-- `CASE-STUDIES.md` 第 1131 行: syntax_error
-- `CASE-STUDIES.md` 第 1419 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 36 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 54 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 68 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 83 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 104 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 125 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 140 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 155 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 206 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 222 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 239 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 256 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 274 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 290 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 307 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 326 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 344 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 358 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 373 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 391 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 412 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 429 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 449 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 465 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 485 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 502 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 521 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 540 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 555 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 571 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 590 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 608 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 627 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 646 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 664 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 677 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 690 行: syntax_error
-- `CODE-VALIDATION-JAVA-REPORT.md` 第 702 行: syntax_error
+- 共有 57 个代码块存在语法问题
+- 常见问题：大括号不匹配、括号不匹配等
 
-## 💡 改进建议
+### 4. 代码片段上下文
 
-1. **添加import语句**: 对于缺少import的代码，建议添加必要的import语句
-2. **更新弃用API**: 对于使用弃用API的代码，建议迁移到新API
-3. **提供上下文**: 对于片段代码，建议添加必要的上下文注释
-4. **代码完整性**: 确保代码示例是完整的、可运行的
+- 共有 1388 个代码片段需要添加上下文注释
+- 建议为片段代码添加必要的说明和完整示例链接
